[package]
name = "compiler_error"
version = "0.1.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
readme = "README.md"
keywords = ["macro", "reporting", "error"]
license = "MIT"
repository = "https://github.com/lu-zero/compiler_error"
description = "Triggerable compiler error"

[lib]
name = "compiler_error"
plugin = true
